feat: improve playback session management
